--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -23,7 +23,7 @@
       </mat-card-content>
     </mat-card>
     
-    @if (nostrService.currentUser()?.privkey) {
+    @if (nostrService.activeAccount()?.privkey) {
       <mat-card class="private-key-card">
         <mat-card-header>
           <mat-card-title>Private Key (nsec)</mat-card-title>
