--- a/src/app/components/storage-stats/storage-stats.component.html
+++ b/src/app/components/storage-stats/storage-stats.component.html
@@ -7,10 +7,10 @@
             <div class="stat-value">{{ stats().relaysCount }}</div>
             <div class="stat-label">Relays</div>
         </div>
-        <div class="stat-item">
+        <!-- <div class="stat-item">
             <div class="stat-value">{{ stats().userMetadataCount }}</div>
             <div class="stat-label">User Profiles</div>
-        </div>
+        </div> -->
         <div class="stat-item">
             <div class="stat-value">{{ stats().userRelaysCount }}</div>
             <div class="stat-label">User Relay Lists</div>
