--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -10,12 +10,16 @@
 .logo-container {
   display: flex;
   justify-content: flex-end;
-  width: 100%;
-  margin-bottom: 1rem;
-  padding-right: 16px;
 }
 
 .logo {
   height: 128px;
   width: auto;
+}
+
+.about-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
 }
