--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
       </p>
       <div class="action-buttons">
         <button mat-stroked-button color="primary">Your Feed</button>
-        <button mat-stroked-button color="accent">Your Profile</button>
+        <button mat-stroked-button color="accent" [routerLink]="['/p', this.nostr.activeAccount()?.pubkey]">Your Profile</button>
       </div>
     </div>
     <div class="hero-image">
