--- a/src/styles.scss
+++ b/src/styles.scss
@@ -374,6 +374,10 @@ mat-card-content li {
   padding: 16px;
 }
 
+.max-width {
+  max-width: 600px;
+}
+
 .fixed-content {
   max-width: 800px;
   margin-left: auto;
