--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,7 +72,7 @@ nav {
 }
 
 .content-wrapper {
-  padding: 1rem;
+  // padding: 1rem;
   box-sizing: border-box;
   height: 100%;
   overflow-y: auto;
