--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     <button mat-icon-button (click)="toggleSidenav()" aria-label="Toggle sidenav">
       <mat-icon>menu</mat-icon>
     </button>
-    <img src="icons/icon-128x128.png" class="app-icon" alt="Nostria icon">
-    <span class="app-title">{{title}}</span>
+    <img src="icons/icon-128x128.png" class="app-icon hide-tiny" alt="Nostria icon">
+    <span class="app-title hide-small">{{title}}</span>
 
     <span class="toolbar-spacer">
         @if (layout.search()) {
