feat: refactor layout classes for consistency across components

--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -1,4 +1,4 @@
-<div class="page-container">
+<div class="content-medium">
   <h1>Your Nostr Credentials</h1>
   
   @if (nostrService.isLoggedIn()) {
