--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="content fixed-content">
+<div class="content-medium">
   <h1 class="page-title">Settings</h1>
 
   <div class="setting-item">
