--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="content max-width">
+<div class="content-small">
   <!-- <mat-card>
     <mat-card-header>
       <div class="logo-container">
