--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -36,7 +36,77 @@
         {{ profile.content.about }}
       </div>
       }
+
+      <!-- Profile context menu button -->
+      <button mat-icon-button class="profile-menu-button" [matMenuTriggerFor]="profileMenu" 
+              matTooltip="Profile options">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+
+      <!-- Profile context menu -->
+      <mat-menu #profileMenu="matMenu">
+        @if (!isOwnProfile()) {
+          <button mat-menu-item (click)="unfollowUser()">
+            <mat-icon>person_remove</mat-icon>
+            <span>Unfollow</span>
+          </button>
+        }
+
+        <!-- Copy submenu -->
+        <button mat-menu-item [matMenuTriggerFor]="copyMenu">
+          <mat-icon>content_copy</mat-icon>
+          <span>Copy</span>
+        </button>
+
+        <!-- Share submenu -->
+        <button mat-menu-item [matMenuTriggerFor]="shareMenu">
+          <mat-icon>share</mat-icon>
+          <span>Share</span>
+        </button>
+
+        @if (!isOwnProfile()) {
+          <mat-divider></mat-divider>
+          <button mat-menu-item (click)="muteUser()">
+            <mat-icon>volume_off</mat-icon>
+            <span>Mute</span>
+          </button>
+          <button mat-menu-item (click)="blockUser()">
+            <mat-icon>block</mat-icon>
+            <span>Block</span>
+          </button>
+        }
+      </mat-menu>
+
+      <!-- Copy submenu -->
+      <mat-menu #copyMenu="matMenu">
+        <button mat-menu-item (click)="copyNpub()">
+          <span>Identifier (npub)</span>
+        </button>
+        <button mat-menu-item (click)="copyNprofile()">
+          <span>Identifier (nprofile)</span>
+        </button>
+        <button mat-menu-item (click)="copyProfileData()">
+          <span>Profile Data</span>
+        </button>
+        <button mat-menu-item (click)="copyFollowingList()">
+          <span>Following List</span>
+        </button>
+        <button mat-menu-item (click)="copyRelayList()">
+          <span>Relay List</span>
+        </button>
+      </mat-menu>
+
+      <!-- Share submenu -->
+      <mat-menu #shareMenu="matMenu">
+        <button mat-menu-item (click)="shareProfile()">
+          <span>Profile</span>
+        </button>
+        <button mat-menu-item (click)="shareProfileUrl()">
+          <span>Profile URL</span>
+        </button>
+      </mat-menu>
     </div>
+
     <div class="profile-actions">
       @if (isOwnProfile()) {
       <button mat-flat-button color="primary">
