--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -67,7 +67,7 @@
         @if (!isOwnProfile()) {
           <mat-divider></mat-divider>
           <button mat-menu-item (click)="muteUser()">
-            <mat-icon>volume_off</mat-icon>
+            <mat-icon>notifications_off</mat-icon>
             <span>Mute</span>
           </button>
           <button mat-menu-item (click)="blockUser()">
